# Open-AIO

./: .gitignore  AGENT.md  NZXT_ESC_LOCAL_SOURCE.md  README.md
desktop-app/: cam_control.py  cooler_tray.py  requirements.txt
docs/: ARCHITECTURE.md  CODEBASE_CLEANUP.md  DESIGNER.md  FIRMWARE_MIGRATION.md  HARDWARE.md  LAB_REBUILD_BASELINE.md  OPEN_AIO_RENAME_ASSESSMENT.md  PROTOCOL.md  RAWUSB_NXZT_ESC.md  ROADMAP.md  SECURITY.md  SIGNALRGB.md  WINDOWS.md
drivers/open-aio-winusb/: open-aio-winusb.inf
electron-app/: README.md  bootstrap-electron.cmd  package-lock.json  package.json  start-electron.cmd
electron-app/src/: main.js
firmware/: platformio.ini
firmware-idf-video-lab/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
firmware-idf-video-lab/main/: main.c
native/open-aio-core/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/open-aio-core/src/: lib.rs  main.rs
native/open-aio-core/test/: protocol-smoke.js
pc-agent/: agent.py  config.example.json  foreground_app.py  requirements.txt  telemetry.py  usb_transport.py  windows_agent.py
scripts/: deploy_signalrgb_plugin.ps1  install_rawusb_winusb_driver.ps1  install_tray_task.ps1  install_winusb_driver.ps1  remove_tray_task.ps1  repair_rawusb_winusb.ps1  run_agent.ps1  run_agent_admin.ps1  run_designer_dev.ps1  run_server.ps1  setup_windows.ps1  start_app.ps1  start_electron.ps1  start_tray.ps1  stop_app.ps1
server/: Dockerfile  config.example.json  requirements.txt
server/app/: auth.py  (+11 more)
signalrgb/: Open_AIO.js  Open_AIO_Display.js  Open_AIO_RawUSB.js
(+81 files in other folders)
